# DesignPatterns-CppApproach

./: .gitmodules  README.md
Behavioral/Observer/: CMakeLists.txt
Behavioral/State/: .gitignore
Behavioral/State/model/: DesignPatterns-State.notation  DesignPatterns-State.uml
Behavioral/State/src/: MusicPlayer.cpp  MusicPlayer.h  MusicPlayerState.cpp  StoppedState.h
Creational/Factory/: CMakeLists.txt
Creational/Singleton/: CMakeLists.txt
Factory/: CMakeLists.txt
Factory/src/: factory_01.cpp
State/: CMakeLists.txt
State/src/: MusicPlayerState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h  State.cpp  StoppedState.cpp
Structural/Adapter/: CMakeLists.txt
Structural/Composite/: CMakeLists.txt
Structural/Composite/src/: Composite.cpp
Structural/Decorator/: CMakeLists.txt
Structural/Decorator/src/: Decorator.cpp
Structural/Facade/: CMakeLists.txt
Structural/Facade/src/: Facade.cpp
Structural/Proxy/: CMakeLists.txt
